Dragging Fix, Inventory with Lock, Debug Icons

--- a/CSS/itemStyle.css
+++ b/CSS/itemStyle.css
@@ -27,3 +27,8 @@
       background-image: url("../itemIcons/itemBackgrounds/void.png");
       background-size: cover;
 }
+
+.debug {
+      background-image: url("../itemIcons/debugIcons/background.png");
+      background-size: cover;
+}
