--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -49,3 +49,8 @@
       text-align: right;
 }
 
+.stat-display {
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
+}
