--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -54,3 +54,9 @@
       justify-content: space-around;
       flex-direction: row;
 }
+
+.inventories {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+}
